--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<a href="plugin.video.mykodibuildwizard.zip">plugin.video.mykodibuildwizard.zip</a>
+<a href="plugin.video.mykodibuildwizard.zip">plugin.video.mykodibuildwizard.zip</a
 <a href="plugin.program.FatFarley.zip">plugin.program.FatFarley.zip</a>
