--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<a href="plugin.video.mykodibuildwizard.zip">plugin.video.mykodibuildwizard.zip</a>
+<a href="plugin.video.mykodibuildwizard.zip">plugin.video.mykodibuildwizard.zip</a
 <a href="plugin.program.FatFarley.zip">plugin.program.FatFarley.zip</a>
 
