--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<a href="plugin.video.fatfarley.zip">plugin.video.mykodibuildwizard.zip</a>
+<a href="plugin.video.fatfarley.zip">plugin.video.fatfarley.zip</a>
 <a href="plugin.program.fatfarley.zip">plugin.program.fatfarley.zip</a>
 <a href="plugin.program.FatFarley-1.1.zip">plugin.program.FatFarley-1.1.zip</a>
